name:                yi-vim-vty-static
version:             0.1.0.0
license:             GPL-3
author:              Yi developers
maintainer:          yi-devel@googlegroups.com
category:            Yi
build-type:          Simple
cabal-version:       >=1.10

executable yi-vim-vty-static
  main-is:             Main.hs
  build-depends:
      base >=4.6 && <5
    , microlens-platform
    , mtl
    , yi-core
    , yi-frontend-vty
    , yi-keymap-vim
    , yi-mode-haskell
    , yi-rope
  hs-source-dirs: .
  ghc-options: -O2 -threaded -Wall -Werror -ferror-spans
  default-language:    Haskell2010