name:           yi-vim-vty-static
version:        0.17.0
category:       Yi
homepage:       https://github.com/yi-editor/yi#readme
bug-reports:    https://github.com/yi-editor/yi/issues
maintainer:     Yi developers <yi-devel@googlegroups.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/yi-editor/yi

executable yi
  main-is: Main.hs
  hs-source-dirs:
      ./.
  ghc-options: -Wall -ferror-spans -threaded
  build-depends:
      base >= 4.8 && < 5
    , microlens-platform
    , mtl
    , yi-core >= 0.17
    , yi-frontend-vty >= 0.17
    , yi-keymap-vim >= 0.17
    , yi-misc-modes >= 0.17
    , yi-mode-haskell >= 0.17
    , yi-rope >= 0.10
  default-language: Haskell2010
