name:           yi-cocoa
version:        0.6.2.5
category:       Development, Editor
synopsis:       Cocoa UI for Yi
description:
  The Cocoa UI frontend for the Yi editor.
license:        GPL
license-file:   LICENSE
author:         AUTHORS
maintainer:     yi-devel@googlegroups.com
homepage:       http://haskell.org/haskellwiki/Yi
bug-reports:    http://code.google.com/p/yi-editor/issues/list
Cabal-Version:  >= 1.6
tested-with:    GHC==7.0.1
build-type:     Simple

library
  hs-source-dirs: src
  exposed-modules:
    Yi.UI.Cocoa
  other-modules:
    Yi.UI.Cocoa.Application
    Yi.UI.Cocoa.TextStorage
    Yi.UI.Cocoa.TextView
    Yi.UI.Cocoa.Utils
  build-depends:
    base >=4.0 && <5,
    containers,
    filepath>=1.1 && <1.3,
    monads-fd >=0.1.0.1,
    pointedlist >= 0.3.5 && <0.4,
    yi ==0.6.2.5,

    -- Cocoa dependencies
    HOC,
    HOC-AppKit,
    HOC-Foundation

  -- Can we remove this?
  cpp-options: -DFRONTEND_COCOA
