name:           yi-pango
version:        0.6.2.5
category:       Development, Editor
synopsis:       Pango UI for Yi
description:
  The Gtk-based Pango UI frontend for the Yi editor.
license:        GPL
license-file:   LICENSE
author:         AUTHORS
maintainer:     yi-devel@googlegroups.com
homepage:       http://haskell.org/haskellwiki/Yi
bug-reports:    http://code.google.com/p/yi-editor/issues/list
Cabal-Version:  >= 1.6
tested-with:    GHC==7.0.1
build-type:     Simple

flag gnome
  Default: False
  Description: Enable GNOME integration

library
  hs-source-dirs: src
  exposed-modules:
    Yi.UI.Pango
    Yi.UI.Pango.Control
  build-depends:
    base >=4.0 && <5,
    containers,
    filepath>=1.1 && <1.3,
    monads-fd >=0.1.0.1,
    pointedlist >= 0.3.5 && <0.4,
    yi ==0.6.2.5,

    -- Gtk dependencies
    gtk ==0.12.*,
    glib ==0.12.*,
    pango ==0.12.*

  -- Can we remove this?
  cpp-options: -DFRONTEND_PANGO

  if flag(gnome)
    build-depends:
      gconf ==0.12.*
    cpp-options: -DGNOME_ENABLED
    exposed-modules: Yi.UI.Pango.Gnome
