name:           yi-vte
version:        0.6.2.5
category:       Development, Editor
synopsis:       Vte UI for Yi
description:
  The Gtk-based Vte (virtual terminal) UI frontend for the Yi editor.
license:        GPL
license-file:   LICENSE
author:         AUTHORS
maintainer:     yi-devel@googlegroups.com
homepage:       http://haskell.org/haskellwiki/Yi
bug-reports:    http://code.google.com/p/yi-editor/issues/list
Cabal-Version:  >= 1.6
tested-with:    GHC==7.0.1
build-type:     Simple

library
  hs-source-dirs: src
  exposed-modules:
    Yi.UI.Vte
  build-depends:
    base >=4.0 && <5,
    containers,
    executable-path,
    yi ==0.6.2.5,

    -- Gtk dependencies
    gtk ==0.12.*,
    glib ==0.12.*,
    pango ==0.12.*,
    vte ==0.12.*

  -- Can we remove this?
  cpp-options: -DFRONTEND_VTE
