name:           yi-vty
version:        0.6.2.5
category:       Development, Editor
synopsis:       Vty (terminal) UI for Yi
description:
  The Vty (terminal) UI frontend for the Yi editor.
license:        GPL
license-file:   LICENSE
author:         AUTHORS
maintainer:     yi-devel@googlegroups.com
homepage:       http://haskell.org/haskellwiki/Yi
bug-reports:    http://code.google.com/p/yi-editor/issues/list
Cabal-Version:  >= 1.6
tested-with:    GHC==7.0.1
build-type:     Simple

library
  hs-source-dirs: src
  exposed-modules:
    Yi.UI.Vty
  build-depends:
    base >=4.0 && <5,
    containers,
    filepath>=1.1 && <1.3,
    monads-fd >=0.1.0.1,
    pointedlist >= 0.3.5 && <0.4,
    unix-compat >=0.1 && <0.3,
    vty >=4.0.0 && < 5,
    yi ==0.6.2.5

  if !os(mingw32)
    build-depends: unix

  -- Can we remove this?
  cpp-options: -DFRONTEND_VTY
